--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -34,8 +34,8 @@ jobs:
 
       - name: Run bandit security scan
         run: |
-          bandit -r src/ -c .bandit -f json -o bandit-report.json || true
-          bandit -r src/ -c .bandit -f txt
+          bandit -r src/ -c bandit.yaml -f json -o bandit-report.json || true
+          bandit -r src/ -c bandit.yaml -f txt
 
       - name: Upload security reports
         uses: actions/upload-artifact@v4
