--- a/tests/data/pass/y9_pass_expected.yaml
+++ b/tests/data/pass/y9_pass_expected.yaml
@@ -1,1 +1,8 @@
-{}
+# Simple documents test
+simple_documents:
+  first_document:
+    key1: value1
+    key2: value2
+  second_document:
+    key3: value3
+    key4: value4
