--- a/tests/data/fail/y5_fail_input.yaml
+++ b/tests/data/fail/y5_fail_input.yaml
@@ -1,6 +1,11 @@
+--
 config:
   patterns:
     - "*.{html,css,js}"
     - "*.{py,pyc}"
   paths:
     - "/path/to/{file1,file2}"
+data:
+  values:
+    - "value1"
+    - "value2"
