--- a/tests/data/pass/y7_pass_expected.yaml
+++ b/tests/data/pass/y7_pass_expected.yaml
@@ -1,3 +1,89 @@
-a: 1
-b: 2
-c: 3
+anchor1:
+  name: First Anchor
+  value: 42
+anchor2:
+  name: Second Anchor
+  value: 100
+arrays:
+  mixed:
+  - 42
+  - true
+  - hello
+  -
+  objects:
+  - active: true
+    age: 30
+    name: Alice
+  - active: false
+    age: 25
+    name: Bob
+  - active: true
+    age: 35
+    name: Charlie
+  simple:
+  - 1
+  - 1
+  - 3
+  - 4
+  - 5
+empty:
+  dict: {}
+  list: []
+  string: ''
+inline_refs:
+  ref1:
+    name: Inline Anchor
+    value: 999
+  ref2:
+    name: First Anchor
+    value: 42
+mixed_keys:
+  123: numeric key
+  false: another boolean
+  ?
+  : null key
+  true: boolean key
+  quoted_key: quoted value
+  string_key: string value
+nested:
+  deep:
+    deeper:
+      deepest:
+        mixed:
+        - 42
+        - false
+        - true
+        - string
+        -
+        numbers:
+        - 1
+        - 1
+        - 2
+        - 3
+        - 4
+        - 5
+        - 6
+        - 9
+        value: very deep
+norway_values:
+  false: false
+  true: true
+  'n': false
+  'y': true
+references:
+  first:
+    name: First Anchor
+    value: 42
+  inline:
+    name: Inline Anchor
+    value: 999
+  second:
+    name: Second Anchor
+    value: 100
+special:
+  key with spaces: value with spaces
+  key#with#hashes: value#with#hashes
+  key-with-dashes: value-with-dashes
+  key.with.dots: value.with.dots
+  key:with:colons: value:with:colons
+  key_with_underscores: value_with_underscores
