--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,25 @@
 [project]
 name = "ordnung"
 version = "0.1.0"
-description = "YAML/JSON sorter"
+description = "A Python utility for sorting YAML and JSON files with support for batch processing, directory traversal, and pattern matching"
+readme = "README.md"
+license = { text = "MIT" }
+authors = [{ name = "Your Name", email = "your.email@example.com" }]
+keywords = ["yaml", "json", "sort", "format", "cli"]
+classifiers = ["Topic :: Utilities"]
 requires-python = ">=3.8"
+dependencies = ["PyYAML>=6.0"]
+
+[project.scripts]
+ordnung = "ordnung.file_sorter:main"
+
+[project.optional-dependencies]
+test = ["pytest", "pytest-cov", "PyYAML>=6.0"]
+dev = ["ruff", "pytest", "pytest-cov", "mypy"]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [tool.uv]
 # uv will use requirements.txt for runtime deps
@@ -128,10 +145,6 @@ max-complexity = 10
 [tool.ruff.per-file-ignores]
 "__init__.py" = ["F401"]
 "tests/**/*" = ["PLR2004", "S101"]
-
-[project.optional-dependencies]
-test = ["pytest", "pytest-cov", "PyYAML>=6.0"]
-dev = ["ruff", "pytest", "pytest-cov", "mypy"]
 
 [tool.ruff.lint]
 # Enable pycodestyle (`E`), Pyflakes (`F`), and isort (`I`) codes
